[project]
name = "psutil-container-memory-patch"
description = "Make comfyui show correct memory information in the container (psutil monkey path)"
version = "0.0.1"
license = { file = "LICENSE.txt" }
dependencies = []

[project.urls]
Repository = "https://github.com/springjk/ComfyUI-Psutil-Container-Memory-Patch"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "springjk"
DisplayName = "Psutil Container Memory Patch"
Icon = ""